--- a/_includes/resume/certificates.liquid
+++ b/_includes/resume/certificates.liquid
@@ -1,7 +1,7 @@
 <div class="list-groups">
   {% assign certificates = data[1] | sort: 'date' | reverse %}
   {% for content in certificates %}
-    <div class="list-group col-md-6">
+    <div class="list-group col-md-12">
       <table class="table-cv list-group-table">
         <tbody>
           <tr>
@@ -10,7 +10,9 @@
                 <i class="{{ content.icon }}"></i>
               </td>
             {% else %}
-              <td class="list-group-category-icon"></td>
+              <td class="list-group-category-icon">
+                <i class="fa-solid fa-certificate"></i>
+              </td>
             {% endif %}
             <!-- Calculate colspan number for category title -->
             {% assign i = 1 %}
@@ -18,7 +20,7 @@
               {% assign i = i | plus: 1 %}
             {% endfor %}
             <td colspan="{{ i }}" class="list-group-category">
-              <a href="{{ content.url | default: # }}">{{ content.name }}</a>
+              <a href="{{ content.url | default: # }}">{{ content.name }}</a> -  {{ content.date }}
             </td>
           </tr>
           <tr>
@@ -26,7 +28,6 @@
             <td class="list-group-name">
               <b>{{ content.issuer }}</b>
             </td>
-            <td class="list-group-name">{{ content.date }}</td>
           </tr>
         </tbody>
       </table>
