--- a/_includes/resume/education.liquid
+++ b/_includes/resume/education.liquid
@@ -28,6 +28,9 @@
                       <i class="fa-solid fa-location-dot iconlocation"></i>
                       {{ content.location }}
                     </p>
+                    {% if content.logo %}
+                      <img src="{{content.logo}}" style="width: 100%;">
+                    {% endif %}
                   </td>
                 </tr>
               {% endif %}
@@ -38,8 +41,7 @@
           <h6 class="title font-weight-bold ml-1 ml-md-4">
             <a href="{{ content.url }}">{{ content.studyType }}</a>
           </h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.institution }}</h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.area }}</h6>
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.area }}, {{ content.institution }}</h6>
           <ul class="items">
             {% for item in content.courses %}
               <li>
