--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -118,6 +118,9 @@
 {% if site.zotero_username %}
   <a href="https://www.zotero.org/{{ site.zotero_username }}" title="Zotero"><i class="ai ai-zotero"></i></a>
 {% endif %}
+{% if site.zoom_link %}
+  <a href="{{ site.zoom_link }}" title="Call"><i class="fa fa-video-camera"></i></a>
+{% endif %}
 {% if site.rss_icon %}
   <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
 {% endif %}
